--- a/oteldemo/Dockerfile
+++ b/oteldemo/Dockerfile
@@ -1,7 +1,7 @@
-FROM eclipse-temurin:21-jdk AS builder
+FROM maven:3.9.8-eclipse-temurin-21 AS builder
 WORKDIR /app
 COPY . .
-RUN ./mvnw clean install -DskipTests
+RUN mvn clean install -DskipTests
 
 FROM eclipse-temurin:21-jre
 ARG version=2.5.0
