--- a/oteldemo/src/main/resources/application.properties
+++ b/oteldemo/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=oteldemo
+
+# Enable metric
+management.info.env.enabled=true
+info.app.name=My demo service
+info.app.description=My demo service description
+info.app.version=1.0.0
+management.endpoints.web.exposure.include=health,info,prometheus
+
+#spring.sql.init.mode=never
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.datasource.hikari.maxLifetime=600000
+#spring.datasource.url=jdbc:mysql://localhost:3306/test?connectionTimeZone=UTC
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.datasource.username=root
+#spring.datasource.password=secret
