Add loging with JSON

--- a/oteldemo/pom.xml
+++ b/oteldemo/pom.xml
@@ -71,6 +71,13 @@
 			<groupId>io.opentelemetry</groupId>
 			<artifactId>opentelemetry-exporter-otlp</artifactId>
 		</dependency>
+
+		<!-- Logging with JSON-->
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>8.0</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
