Collect metric data in prometheus server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,3 +41,10 @@ services:
       - "16686:16686"
     environment:
       - COLLECTOR_OTLP_ENABLED=true
+  
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - "./configs/prometheus.yml:/etc/prometheus/prometheus.yml"
